# localdb

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  VISION.md  product_positioning.md  rust_backend_scope.md  smoke_test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.omo/evidence/: F3-coverage-remediation.txt  task-1-workspace-cleanup-pass.txt  task-10-workspace-cleanup-pass.txt  task-12-workspace-cleanup-pass.txt  task-13-workspace-cleanup-pass.txt  task-14-workspace-cleanup-pass.txt  task-15-workspace-cleanup-pass.txt  task-16-workspace-cleanup-pass.txt  task-19-workspace-cleanup-pass.txt  task-20-workspace-cleanup-pass.txt  task-21-workspace-cleanup-pass.txt  task-22-workspace-cleanup-pass.txt  task-23-workspace-cleanup-pass.txt  task-24-workspace-cleanup-pass.txt  task-25-after.json  task-26-workspace-cleanup-pass.txt  task-27-workspace-cleanup-pass.txt  task-28-workspace-cleanup-pass.txt  task-29-workspace-cleanup-pass.txt  task-31-workspace-cleanup-pass.txt  task-32-workspace-cleanup-pass.txt  task-33-workspace-cleanup-pass.txt  task-9-workspace-cleanup-pass.txt
.omo/notepads/workspace-cleanup-pass/: issues.md
.omo/run-continuation/: ses_0fa82cf9affexdGP02ERVcMyZQ.json  ses_0fb098a93ffejFo87XsE3Et8rv.json  ses_0fb8f2061ffdFsYUiCxZwe8GqG.json  ses_0fc279a34ffeqH83HwpYDyg7EY.json  ses_0fc28f52effe2IM04fVEE55uCD.json  ses_0fc3eec73ffdegTMvl2T4a3f4h.json  ses_0fc65c1a5ffeaXZUgq4vXt71AZ.json  ses_0fc6fea1affe558HH7whcQKB3Y.json  ses_0fc903c32ffefpxRsQ6mznlt9A.json  ses_0fca2187effe6x1IFf00l53t2g.json  ses_0ff282987ffeC3vC1uhCrBldNA.json  ses_0ff29da5cffepf8p9ZT6hv4Ouw.json  ses_0ff4e1f86ffe2me45xJDm5mLnf.json  ses_0ff50e532ffelf8z7UtmTxbF3E.json  ses_0ff50e545ffeU7m9d2qPzE14Ue.json  ses_0ff5167f0ffeZnHtzt4V2sT54T.json  ses_0ff516803ffea3YNyHNGmE06PE.json  ses_0ff51c36bffe7gFLyQH7B5IQ6X.json  ses_0ff51c37effedWEa4t2gdrIfZS.json  ses_0ff543011ffeM3p4zsjuk1lG75.json  ses_0ff63e9c7ffdyxwluRJ4sImwCy.json  ses_0ff73a781ffdZFXjCHpS72MDhB.json  ses_0ff8c4f3dffes926iqNZ1b3Jyl.json  ses_0ff8c4f51ffeAVr7VEIU3dk0sN.json  ses_10035de66ffe0BFVtHI7TXDcaC.json  ses_1003884f7fferNTFSjXnNHZu2i.json  ses_100388509ffeO5MbhsMY6Eyiks.json  ses_10038c2fbffevK21ogq656Zp4H.json  ses_10038c31cffeLoVt4N6pXerM72.json  ses_10038f8a3ffezaYIr5rFyONQf3.json  ses_10038f8b9ffeUVF5fhOmpFYUQi.json  ses_100392206ffeNca9YV1MJM55QR.json  ses_10039221fffecGW9ukfHIUa5zg.json  ses_1003a1edbffem7p7PHckmfsLfA.json
cli/: Cargo.toml
cli/src/: app_db.rs  daemon_client.rs  lib.rs  normalize.rs  progress.rs
cli/src/cmds/: index.rs  init.rs  search.rs  source.rs  status.rs  store.rs  surface.rs
core/: Cargo.toml
core/src/: backend.rs  block.rs  chunker.rs  citation.rs  embedder.rs  error.rs  heading_index.rs  ids.rs  ingestion.rs  ingestor.rs  lib.rs  markdown_blocks.rs  metadata.rs  parser.rs  progress.rs  search.rs  source.rs  store.rs  store_factory.rs  types.rs  uri.rs
core/src/config/: effective.rs  loader.rs  mod.rs  platform.rs  policy.rs  refresh.rs  runtime_state.rs  schema.rs
core/src/ingestors/: file_ingestor.rs  mod.rs  url_ingestor.rs
core/tests/: bench_extract_chunk.rs
core/tests/fixtures/config/: bad_duration.yaml  typo_key.yaml  unversioned.yaml  valid.yaml
docs/: architecture.md  cli.md  comparison.md  configuration.md  design-decisions.md  http-api.md  install.md  mcp.md  quickstart.md  release-engineering.md
docs/proposals/: single-sql-store.md
embed/: Cargo.toml  build.rs  glibc_shim.c
embed/examples/: embedding_benchmark.rs
embed/src/: error.rs  factory.rs  hf_download.rs  http_helper.rs  lib.rs  model_cache.rs  onnx.rs  openai.rs  perplexity.rs  pplx_context_coreml.rs  pplx_context_onnx.rs  pplx_onnx.rs  retry.rs  voyage.rs
embed/src/coreml/: download.rs  mod.rs  runtime.rs
embed/tests/: pplx_context.rs  pplx_context_coreml.rs  pplx_int8.rs  voyage.rs
extract/: Cargo.toml
extract/src/: chain_extractor.rs  detect.rs  html.rs  lib.rs  markdown.rs  mime.rs  pdf.rs  plaintext.rs  registry.rs
extract/src/parsers/: epub.rs  html.rs  markdown.rs  mod.rs  office.rs  pdf.rs  plaintext.rs
extract/tests/: anytomd_xlsx_bug.rs  golden_tests.rs
extract/tests/fixtures/: article.html  nested_headings.md  plain.txt  sample.epub  simple.md
fetch/: Cargo.toml
fetch/src/: lib.rs
localdb/: Cargo.toml
localdb/src/: main.rs
localdb/tests/: cli_integration.rs  packaging.rs  surface_wiring.rs
mcp/: Cargo.toml
mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
mcp/tests/: mcp_protocol.rs
server/: Cargo.toml
server/src/: daemon.rs  error.rs  handlers.rs  job_queue.rs  lib.rs  lock.rs  scheduler.rs  search_service.rs  socket.rs  state.rs  watcher.rs
server/src/handlers/: config.rs  documents.rs  jobs.rs  mod.rs  search.rs  sources.rs  status.rs  stores.rs  tests.rs
server/src/handlers/tests/: common.rs  config.rs  documents.rs  jobs.rs  search.rs  sources.rs  status.rs  stores.rs
server/tests/: http_api_ops.rs  http_api_sources.rs  http_api_stores.rs
server/tests/common/: mod.rs
skills/localdb/: SKILL.md
specs/: 01-architecture.md  02-domain-model.md  03-config.md  04-search-pipeline.md  05-surfaces.md  06-roadmap.md  07-adr-blocks-canonical-ir.md
store-lancedb/: Cargo.toml
store-lancedb/src/: lib.rs
store-libsql/: Cargo.toml
store-libsql/src/: backend.rs  connection.rs  db.rs  lib.rs  schema.rs  store_handle.rs  unified_schema.rs  vectors.rs
store-libsql/src/registry/: documents.rs  mod.rs  sources.rs  sql.rs  stores.rs  tests.rs
store-libsql/src/runtime_state/: documents.rs  mod.rs  rows.rs  sources.rs  sql.rs  stores.rs  tests.rs
store-libsql/src/tenant/: mod.rs  read.rs  rows.rs  sql.rs  write.rs
store-libsql/tests/: cascade.rs  conformance.rs  conformance_unified.rs  regressions.rs
