[workspace]
members = [
    "core",
    "extract",
    "fetch",
    "store-libsql",
    "embed",
    "server",
    "mcp",
    "cli",
    "localdb",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "color", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ID generation
ulid = { version = "1", features = ["serde"] }

# Hashing
blake3 = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Platform paths
directories = "6"
dirs = "6"

# libSQL (Turso's SQLite fork) — async, DiskANN vectors, FTS5
libsql = "=0.10.0-pre.4"

# Hashing for policy_version
hex = "0.4"

# Progress bars and spinners
indicatif = "0.17"

# Test utilities
tempfile = "3"

# Internal crates
localdb-core = { path = "core" }
extract = { path = "extract" }
fetch = { path = "fetch" }
store-libsql = { path = "store-libsql" }
embed = { path = "embed" }
server = { path = "server" }
mcp = { path = "mcp" }
cli = { path = "cli" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
