[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI command implementations, thin layer on core / daemon client"

[dependencies]
localdb-core = { path = "../core" }
store-lancedb = { path = "../store-lancedb" }
extract = { path = "../extract" }
mcp = { path = "../mcp" }
server = { path = "../server" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
redb = "4"
fd-lock = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
