[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI command implementations, thin layer on core / daemon client"

[dependencies]
localdb-core = { path = "../core" }
store-libsql = { path = "../store-libsql" }
extract = { path = "../extract" }
embed = { path = "../embed", features = ["local-onnx"] }
fetch = { path = "../fetch" }
mcp = { path = "../mcp" }
server = { path = "../server" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
indicatif = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# On macOS, auto-enable CoreML so any localdb build (release tarball or cargo install)
# picks up ANE/GPU acceleration without needing --features. Cargo unions this with the
# local-onnx feature above; Linux never pulls objc2/block2/etc.
embed = { path = "../embed", features = ["local-coreml"] }

[dev-dependencies]
tempfile = { workspace = true }
