[package]
name = "localdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Domain model, search orchestration, traits"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
blake3 = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
