[package]
name = "embed"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Embedder implementations: local ONNX, OpenAI-compatible, and contextualized providers"

[features]
default = []
# Enable local ONNX inference via fastembed + direct ORT (pplx-embed-v1-0.6b)
local-onnx = ["dep:fastembed", "dep:ort", "dep:tokenizers", "dep:ndarray"]
# Enable local CoreML inference (macOS/Apple Silicon only)
local-coreml = ["dep:objc2", "dep:objc2-core-ml", "dep:objc2-foundation", "dep:half", "dep:tokenizers", "dep:hf-hub", "dep:block2"]
# Enable all providers (for tests/CI)
all-providers = ["local-onnx"]

[dependencies]
localdb-core = { path = "../core" }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"

# HTTP client for hosted providers
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Local ONNX inference (optional)
# hf-hub-rustls-tls enables model downloading via HuggingFace Hub (includes hf-hub + rustls)
# ort-download-binaries-rustls-tls downloads the ONNX Runtime binary automatically, over rustls
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"], optional = true }

# For model cache path management
dirs = "5"

# SHA2 for checksum verification
sha2 = "0.10"
hex = "0.4"

# Streaming HTTP download support (also needed by pplx_onnx; no load-dynamic — fastembed's
# ort-download-binaries-rustls-tls already provides ORT via ort-sys build scripts)
futures-util = "0.3"
ort = { version = "=2.0.0-rc.12", features = ["ndarray"], optional = true }
tokenizers = { version = "0.22", optional = true }
ndarray = { version = "0.17", optional = true }

# CoreML inference (macOS only, optional)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-core-ml = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true }
half = { version = "2", optional = true }
block2 = { version = "0.6", optional = true }
# Async HF Hub client for CoreML bundle download (XET-deduped, pinned revisions)
hf-hub = { version = "1.0.0-rc.1", default-features = false, features = ["rustls-tls"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Mock HTTP server for testing hosted providers
wiremock = "0.6"
tempfile = "3"
