[package]
name = "extract"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Format detection and extraction to normalized document text and blocks"

[dependencies]
localdb-core = { path = "../core" }
thiserror = { workspace = true }

# Markdown parsing
pulldown-cmark = "0.13"

# HTML parsing
scraper = "0.27"

# PDF text extraction
pdf-extract = "0.10"
