[package]
name = "extract"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Format detection and extraction to a normalized Markdown document"

[dependencies]
localdb-core = { path = "../core" }

# Markdown parsing
pulldown-cmark = "0.13"

# HTML parsing
scraper = "0.27"

# PDF text extraction
pdf-extract = "0.10"

# Office format conversion (DOCX, PPTX, XLSX, XLS, CSV → Markdown)
anytomd = { version = "1.3.0", default-features = false }

# MIME type sniffing
infer = "0.16"
mime_guess = "2"
# EPUB parsing — read-only, so default features (write/threadsafe/prelude) are off.
rbook = { version = "0.7", default-features = false }

tracing = { workspace = true }

[dev-dependencies]
# Used in tests to build synthetic EPUBs (already in the lockfile via rbook).
zip = { version = "2", default-features = false, features = ["deflate"] }
