[package]
name = "localdb"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local-first knowledge server — single binary with embedded store and MCP/CLI surfaces"

[[bin]]
name = "localdb"
path = "src/main.rs"

[dependencies]
localdb-core = { path = "../core" }
cli = { path = "../cli" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
