[package]
name = "localdb"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local-first knowledge server — single binary with embedded store and MCP/CLI surfaces"

[[bin]]
name = "localdb"
path = "src/main.rs"

[dependencies]
cli = { path = "../cli" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
serde_json = { workspace = true }
libsql = { workspace = true }
